ChangeData: Replace FluentIterable with Java 8 stream
Change-Id: I3d5172b4e2c81ba3aa00810b8be9474f1daf779f